# cmake-project-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-setup-osx.sh  init-setup-osx.sh  vcpkg.json
.cache/clangd/index/: main.cpp.7EBC65AB9317480F.idx
app/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
